--- a/assignments1/index.html
+++ b/assignments1/index.html
@@ -157,7 +157,7 @@
 		</footer>
 
 		<!-- Scripts -->
-		<script src="js/js.script"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
