--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Isaac Mayala | Rugby Player Profile</title>
         <meta charset="utf-8" />
