--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -6,8 +6,7 @@
   <title>Frontend Mentor | QR code component</title>
    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-</style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <main> <!-- Added semantic main tag for better accessibility -->
