--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -11,7 +11,7 @@
 <body>
   <main> <!-- Added semantic main tag for better accessibility -->
     <div class="card" role="article"> <!-- Added role for better accessibility -->
-      <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+      <img src="images/image-qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
