--- a/assignment2/part2.html
+++ b/assignment2/part2.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QR Code Grid</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+</style>
+</head>
+<body>
+  <main> <!-- Added semantic main tag -->
+    <ul class="qr-grid" role="list"> <!-- Added role for better accessibility -->
+      <li>
+        <div class="card" role="article">
+          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </li>
+      <li>
+        <div class="card" role="article">
+          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </li>
+      <li>
+        <div class="card" role="article">
+          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </li>
+      <li>
+        <div class="card" role="article">
+          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </li>
+    </ul>
+    <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Isaac Mayala</a>.
+  </div>
+  </main>
+   
+</body>
+</html>
