--- a/assignment2/part2.html
+++ b/assignment2/part2.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QR Code Grid</title>
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-</style>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <main> <!-- Added semantic main tag -->
