--- a/assignment2/part2.html
+++ b/assignment2/part2.html
@@ -13,28 +13,28 @@
     <ul class="qr-grid" role="list"> <!-- Added role for better accessibility -->
       <li>
         <div class="card" role="article">
-          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <img src="images/image-qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
           <h2>Improve your front-end skills by building projects</h2>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </li>
       <li>
         <div class="card" role="article">
-          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <img src="images/image-qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
           <h2>Improve your front-end skills by building projects</h2>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </li>
       <li>
         <div class="card" role="article">
-          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <img src="images/image-qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
           <h2>Improve your front-end skills by building projects</h2>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </li>
       <li>
         <div class="card" role="article">
-          <img src="images/qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
+          <img src="images/image-qr-code.png" alt="QR code to Frontend Mentor website" class="qr-code">
           <h2>Improve your front-end skills by building projects</h2>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
