--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todo List App</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Todo List App</h1>
+            <div id="auth-status">
+                <span id="username-display"></span>
+                <button id="logout-btn" style="display: none;">Logout</button>
+            </div>
+        </header>
 
+        <div id="auth-forms">
+            <!-- Login Form -->
+            <div id="login-section" class="auth-section">
+                <h2>Login</h2>
+                <form id="login-form">
+                    <div class="form-group">
+                        <label for="login-username">Username</label>
+                        <input type="text" id="login-username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="login-password">Password</label>
+                        <input type="password" id="login-password" required>
+                    </div>
+                    <button type="submit">Login</button>
+                </form>
+                <p>Don't have an account? <a href="#" id="show-register">Register here</a></p>
+            </div>
+
+            <!-- Register Form -->
+            <div id="register-section" class="auth-section" style="display: none;">
+                <h2>Register</h2>
+                <form id="register-form">
+                    <div class="form-group">
+                        <label for="register-username">Username</label>
+                        <input type="text" id="register-username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="register-password">Password</label>
+                        <input type="password" id="register-password" required>
+                    </div>
+                    <button type="submit">Register</button>
+                </form>
+                <p>Already have an account? <a href="#" id="show-login">Login here</a></p>
+            </div>
+        </div>
+
+        <!-- Todo List Container (only visible when logged in) -->
+        <div id="todo-container" style="display: none;">
+            <div id="add-todo-section">
+                <h2>Add New Todo</h2>
+                <form id="add-todo-form">
+                    <div class="form-group">
+                        <label for="todo-title">Title</label>
+                        <input type="text" id="todo-title" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="todo-description">Description</label>
+                        <textarea id="todo-description"></textarea>
+                    </div>
+                    <button type="submit">Add Todo</button>
+                </form>
+            </div>
+
+            <div id="todo-list-section">
+                <h2>Your Todos</h2>
+                <div id="todos-list">
+                    <!-- Todo items will be added here dynamically -->
+                </div>
+            </div>
+
+            <!-- Edit Todo Modal -->
+            <div id="edit-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close-modal">&times;</span>
+                    <h2>Edit Todo</h2>
+                    <form id="edit-todo-form">
+                        <input type="hidden" id="edit-todo-id">
+                        <div class="form-group">
+                            <label for="edit-todo-title">Title</label>
+                            <input type="text" id="edit-todo-title" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-todo-description">Description</label>
+                            <textarea id="edit-todo-description"></textarea>
+                        </div>
+                        <div class="form-group checkbox">
+                            <label for="edit-todo-completed">
+                                <input type="checkbox" id="edit-todo-completed">
+                                Completed
+                            </label>
+                        </div>
+                        <button type="submit">Save Changes</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div id="notification" class="notification"></div>
+    </div>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
